--- a/app/views/users/_modal.html.erb
+++ b/app/views/users/_modal.html.erb
@@ -1,71 +1,69 @@
-<div id="myModal" data-controller='modal' class="modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title"><%= title %></h5>
-        <button type="button"
-                class="btn-close"
-                data-action='click->modal#close'
-                data-bs-dismiss="modal"
-                aria-label="Close"></button>
+<div data-controller='modal' data-modal-user-link-value="<%= user.id ? user.id : 'new' %>">
+  <div class="modal-header">
+    <h5 class="modal-title"><%= title %></h5>
+    <button type="button"
+            class="btn-close"
+            data-action='click->modal#close'
+            data-bs-dismiss="modal"
+            aria-label="Close"></button>
+  </div>
+  <div>
+    <%= form_for user do |f| %>
+      <div class="modal-body">
+        <div class="mb-3 position-relative">
+          <% if user.errors[:name] %>
+            <%= f.label :name, class: 'form-label' %>
+            <%= f.text_field :name, class: 'form-control', disabled: disabled_status %>
+          <% end %>
+          <span class="error-message"><%= user.errors[:name].first %></span>
+        </div>
+        <div class="mb-3 position-relative">
+          <% if user.errors[:email] %>
+            <%= f.label :email, class: 'form-label' %>
+            <%= f.text_field :email, class: 'form-control', disabled: disabled_status %>
+          <% end %>
+          <span class="error-message"><%= user.errors[:email].first %></span>
+        </div>
+        <div class="mb-3 position-relative">
+          <% if user.errors[:seniority] %>
+            <%= f.label :seniority, class: 'form-label' %>
+            <%= f.text_field :seniority, class: 'form-control', disabled: disabled_status %>
+          <% end %>
+          <span class="error-message"><%= user.errors[:seniority].first %></span>
+        </div>
+        <div class="mb-3 position-relative">
+          <%= f.fields_for :city do |c| %>
+            <% if user.city.errors[:name] %>
+              <%= c.label 'City name', class: 'form-label' %>
+              <%= c.text_field :name, class: 'form-control', disabled: disabled_status %>
+            <% end %>
+            <span class="error-message"><%= user.city.errors[:name].first %></span>
+          <% end %>
+        </div>
       </div>
-      <div>
-        <%= form_for user do |f| %>
-          <div class="modal-body">
-            <div class="mb-3 position-relative">
-              <% if user.errors[:name] %>
-                <%= f.label :name, class: 'form-label' %>
-                <%= f.text_field :name, class: 'form-control', disabled: disabled_status %>
-              <% end %>
-              <span class="error-message"><%= user.errors[:name].first %></span>
-            </div>
-            <div class="mb-3 position-relative">
-              <% if user.errors[:email] %>
-                <%= f.label :email, class: 'form-label' %>
-                <%= f.text_field :email, class: 'form-control', disabled: disabled_status %>
-              <% end %>
-              <span class="error-message"><%= user.errors[:email].first %></span>
-            </div>
-            <div class="mb-3 position-relative">
-              <% if user.errors[:seniority] %>
-                <%= f.label :seniority, class: 'form-label' %>
-                <%= f.text_field :seniority, class: 'form-control', disabled: disabled_status %>
-              <% end %>
-              <span class="error-message"><%= user.errors[:seniority].first %></span>
-            </div>
-            <div class="mb-3 position-relative">
-              <%= f.fields_for :city do |c| %>
-                <% if user.city.errors[:name] %>
-                  <%= c.label 'City name', class: 'form-label' %>
-                  <%= c.text_field :name, class: 'form-control', disabled: disabled_status %>
-                <% end %>
-                <span class="error-message"><%= user.city.errors[:name].first %></span>
-              <% end %>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <% if action == 'edit' %>
-              <%= link_to 'Destroy', user,
-                                     method: :delete,
-                                     data: {
-                                       confirm: 'Are you sure?',
-                                       action: 'click->modal#close'
-                                     },
-                                     class: 'text-danger' %>
-            <% elsif action == 'show' %>
-              <%= link_to 'Edit', edit_user_path(user.id),
-                                  data: { "turbo-frame": "modal" },
-                                  class: 'btn btn-primary text-white' %>
-            <% end %>
-            <% if action == 'edit' || action == 'new' %>
-              <%= f.submit 'Submit', class: 'btn btn-primary',
-                                     data: {
-                                       'turbo-frame': 'modal'
-                                    } %>
-            <% end %>
-          </div>
+      <div class="modal-footer">
+        <% if action == 'edit' %>
+          <%= link_to 'Destroy', user,
+                                 method: :delete,
+                                 data: {
+                                   confirm: 'Are you sure?',
+                                   action: 'click->modal#close'
+                                 },
+                                 class: 'text-danger' %>
+        <% elsif action == 'show' %>
+          <%= link_to 'Edit', edit_user_path(user.id),
+                              data: {
+                                "turbo-frame": "modal"
+                              },
+                              class: 'btn btn-primary text-white' %>
+        <% end %>
+        <% if action == 'edit' || action == 'new' %>
+          <%= f.submit 'Submit', class: 'btn btn-primary',
+                                 data: {
+                                   'turbo-frame': 'modal'
+                                } %>
         <% end %>
       </div>
-    </div>
+    <% end %>
   </div>
 </div>
