--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-5">
   <%= link_to 'Create user', new_user_path,
                              class: 'm-2 fixed-bottom btn btn-primary text-white',
-                             id: 'new-user-link',
+                             id: 'user-link-new',
                              data: {
                                'turbo-frame': 'modal'
                              } %>
