--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <%= turbo_frame_tag "modal" do %>
-  <%= render 'users/modal', user: @user, title: 'User info', disabled_status: true, action: params[:action] %>
+  <%= render 'users/modal', user: @user,
+                            title: 'User info',
+                            disabled_status: true,
+                            action: params[:action] %>
 <% end %>
