--- a/app/views/users/_modal.html.erb
+++ b/app/views/users/_modal.html.erb
@@ -1,11 +1,12 @@
-<div data-controller='modal' data-modal-user-link-value="<%= user.id ? user.id : 'new' %>">
+<div data-controller='modal'
+     data-modal-user-link-value=<%= user.id ? user.id : 'new' %>>
   <div class="modal-header">
     <h5 class="modal-title"><%= title %></h5>
-    <button type="button"
-            class="btn-close"
-            data-action='click->modal#close'
-            data-bs-dismiss="modal"
-            aria-label="Close"></button>
+    <%= link_to '', users_path, type: 'button',
+            class: 'btn-close',
+            data: { action: 'click->modal#close',
+            'bs-dismiss': 'modal' },
+            aria: { label: 'Close' } %>
   </div>
   <div>
     <%= form_for user do |f| %>
@@ -13,31 +14,43 @@
         <div class="mb-3 position-relative">
           <% if user.errors[:name] %>
             <%= f.label :name, class: 'form-label' %>
-            <%= f.text_field :name, class: 'form-control', disabled: disabled_status %>
+            <%= f.text_field :name, class: 'form-control',
+                                    disabled: disabled_status %>
           <% end %>
-          <span class="error-message"><%= user.errors[:name].first %></span>
+          <span class="error-message">
+            <%= user.errors[:name].first %>
+          </span>
         </div>
         <div class="mb-3 position-relative">
           <% if user.errors[:email] %>
             <%= f.label :email, class: 'form-label' %>
-            <%= f.text_field :email, class: 'form-control', disabled: disabled_status %>
+            <%= f.text_field :email, class: 'form-control',
+                                     disabled: disabled_status %>
           <% end %>
-          <span class="error-message"><%= user.errors[:email].first %></span>
+          <span class="error-message">
+            <%= user.errors[:email].first %>
+          </span>
         </div>
         <div class="mb-3 position-relative">
           <% if user.errors[:seniority] %>
             <%= f.label :seniority, class: 'form-label' %>
-            <%= f.text_field :seniority, class: 'form-control', disabled: disabled_status %>
+            <%= f.text_field :seniority, class: 'form-control',
+                                         disabled: disabled_status %>
           <% end %>
-          <span class="error-message"><%= user.errors[:seniority].first %></span>
+          <span class="error-message">
+            <%= user.errors[:seniority].first %>
+          </span>
         </div>
         <div class="mb-3 position-relative">
           <%= f.fields_for :city do |c| %>
             <% if user.city.errors[:name] %>
               <%= c.label 'City name', class: 'form-label' %>
-              <%= c.text_field :name, class: 'form-control', disabled: disabled_status %>
+              <%= c.text_field :name, class: 'form-control',
+                                      disabled: disabled_status %>
             <% end %>
-            <span class="error-message"><%= user.city.errors[:name].first %></span>
+            <span class="error-message">
+              <%= user.city.errors[:name].first %>
+            </span>
           <% end %>
         </div>
       </div>
