--- a/app/views/users/_listing.html.erb
+++ b/app/views/users/_listing.html.erb
@@ -1,4 +1,4 @@
-<div id="usersListing">
+<div id="users_listing">
   <% if users&.exists? %>
     <div class="row users-header py-2">
       <span class="col-xl-2"><%= t '.table_column_title_name' %></span>
