feature(views|frontend|controllers) add clean modal <bugs>

--- a/app/views/users/_listing_row.html.erb
+++ b/app/views/users/_listing_row.html.erb
@@ -1,4 +1,4 @@
-<div id=<%= "user-#{user.id}" %> class="row my-1 users-details mb-1">
+<div id="user-<%= user.id %>" class="row my-1 users-details mb-1">
   <span class="col-xl-2"><%= user.name %></span>
   <span class="col-xl-3"><%= user.email %></span>
   <span class="col-xl-3"><%= user.seniority %></span>
