chore(views|js-controllers) remove trash

--- a/app/views/users/_modal.html.erb
+++ b/app/views/users/_modal.html.erb
@@ -1,5 +1,4 @@
-<div data-controller='modal'
-     data-modal-user-link-value=<%= user.id ? user.id : 'new' %>>
+<div data-controller='modal'>
   <div class="modal-header">
     <h5 class="modal-title"><%= title %></h5>
     <%= link_to '', user, type: 'button',
