fix(frontend|views) resolve one time loading user form

--- a/app/views/users/_modal.html.erb
+++ b/app/views/users/_modal.html.erb
@@ -73,7 +73,8 @@
         <% if action != 'show' %>
           <%= f.submit 'Submit', class: 'btn btn-primary',
                                  data: {
-                                   'turbo-frame': 'modal'
+                                   'turbo-frame': 'modal',
+                                   action: 'click->modal#afterSubmitClearUrl'
                                 } %>
         <% end %>
       </div>
