--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -5,13 +5,7 @@
        data-toggle-menu-more-button-value="<%= t(".show_more_button") %>"
        data-toggle-menu-less-button-value="<%= t(".show_less_button") %>">
     <% seniorities.each do |key, filter| %>
-      <div class="form-check seniority_filter_items" data-toggle-menu-target='item'>
-        <input class="form-check-input" type="checkbox" value="<%= key %>"
-                                    id="flexCheckIndeterminate-<%= key %>">
-        <label class="form-check-label">
-          <%= key + " (#{filter[:size]})" %>
-        </label>
-      </div>
+      <%= render 'users/seniority_row', key: key, filter: filter %>
     <% end %>
     <%= render 'shared/toggle_menu_buttons' %>
   </div>
