--- a/app/views/cities/_all_cities.html.erb
+++ b/app/views/cities/_all_cities.html.erb
@@ -5,13 +5,7 @@
        data-toggle-menu-more-button-value="<%= t(".show_more_button") %>"
        data-toggle-menu-less-button-value="<%= t(".show_less_button") %>">
     <% cities.each do |key, filter| %>
-      <div id='city-<%= key %>' class="form-check city_filter_items" data-toggle-menu-target='item'>
-        <input class="form-check-input" type="checkbox" value="<%= key %>"
-                                    id="flexCheckIndeterminate-<%= key %>">
-        <label class="form-check-label">
-          <%= City.find(key).name + " (#{filter[:size]})" %>
-        </label>
-      </div>
+      <%= render 'cities/city_row', key: key, filter: filter %>
     <% end %>
     <%= render 'shared/toggle_menu_buttons' %>
   </div>
