--- a/app/views/users/destroy.turbo_stream.erb
+++ b/app/views/users/destroy.turbo_stream.erb
@@ -1,3 +1,21 @@
 <%= turbo_stream.remove(
   "user-#{@user.id}"
+) + turbo_stream.replace(
+  "seniority-#{@user.seniority}",
+  partial: 'users/seniority_row',
+  locals: {
+    key: @user.seniority,
+    filter: {
+      size: User.where(seniority: @user.seniority).count.to_s
+    }
+  }
+) + turbo_stream.replace(
+  "city-#{@user.city_id}",
+  partial: 'cities/city_row',
+  locals: {
+    key: @user.city_id,
+    filter: {
+      size: User.where(city_id: @user.city_id).count.to_s
+    }
+  }
 ) %>
