feature(views|controller) updating aggs by creating user (Chewy)

--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -1,4 +1,4 @@
-<div class="filter">
+<div id='seniorities-filter' class="filter">
   <h6><%= t '.seniority_filter' %></h6>
   <div data-controller='toggle-menu'
        data-toggle-menu-visibility-value='false'
