--- a/app/views/cities/_all_cities.html.erb
+++ b/app/views/cities/_all_cities.html.erb
@@ -1,4 +1,4 @@
-<div class="filter">
+<div id="cities-filter" class="filter">
   <h6><%= t '.city_filter' %></h6>
   <div data-controller='toggle-menu'
        data-toggle-menu-visibility-value='false'
