chore(views/users) use method for disabling fields

--- a/app/views/users/create_has_errors.turbo_stream.erb
+++ b/app/views/users/create_has_errors.turbo_stream.erb
@@ -3,7 +3,7 @@
   partial: 'users/modal',
   locals: {
     user: @user,
-    disabled_status: false,
+    disabled_status: @user.persisted?,
     action: 'new',
     title: 'Create user'
   }
