--- a/app/views/users/_listing.html.erb
+++ b/app/views/users/_listing.html.erb
@@ -8,7 +8,7 @@
       <hr class="mt-1 mb-0">
     </div>
     <% users.each do |user| %>
-      <%= cache name: user.updated_at + user.id do %>
+      <%= cache "user-listing-row-id-#{user.id}-updated_at-#{user.updated_at}" do %>
         <%= render 'users/listing_row', user: user %>
       <% end %>
     <% end %>
