feature(project|/stylesheets|/controllers|/views) add generating excel file

--- a/app/frontend/stylesheets/users.scss
+++ b/app/frontend/stylesheets/users.scss
@@ -31,6 +31,11 @@
   width: 140px;
 }
 
+#export-xlsx-link {
+  width: 140px;
+  left: 11%;
+}
+
 .error-message {
   font-size: 10px;
   position: absolute;
