--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -5,7 +5,13 @@
        data-toggle-menu-more-button-value="<%= t(".show_more_button") %>"
        data-toggle-menu-less-button-value="<%= t(".show_less_button") %>">
     <% seniorities.each do |key, filter| %>
-      <%= render 'users/seniority_row', key: key, filter: filter %>
+      <div class="form-check seniority_filter_items" data-show-more-less-target='item'>
+        <input class="form-check-input" type="checkbox" value="<%= key %>"
+                                    id="flexCheckIndeterminate-<%= key %>">
+        <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
+          <%= key + " (#{filter[:size]})" %>
+        </label>
+      </div>
     <% end %>
     <%= render 'shared/toggle_menu_buttons' %>
   </div>
