--- a/app/frontend/stylesheets/users.scss
+++ b/app/frontend/stylesheets/users.scss
@@ -36,6 +36,11 @@
   left: 11%;
 }
 
+#export-xml-link {
+   width: 140px;
+   left: 22%;
+ }
+
 .error-message {
   font-size: 10px;
   position: absolute;
