--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-5">
   <div class="row">
-    <div class="col-xl-6">
+    <div class="col-xl-4">
       <%= link_to 'Create user', new_user_path,
                   class: 'm-2 fixed-bottom btn btn-primary text-white',
                   id: 'new-user-link',
@@ -8,10 +8,16 @@
                     'turbo-frame': 'modal'
                   } %>
     </div>
-    <div class="col-xl-6">
-      <%= link_to 'Export users',
+    <div class="col-xl-4">
+      <%= link_to 'Export users (xlsx)',
                   users_path(format: 'xlsx'),
                   id: 'export-xlsx-link',
+                  class: 'm-2 fixed-bottom btn btn-success text-white' %>
+    </div>
+    <div class="col-xl-4">
+      <%= link_to 'Export users (xml)',
+                  users_path(format: 'xml'),
+                  id: 'export-xml-link',
                   class: 'm-2 fixed-bottom btn btn-success text-white' %>
     </div>
   </div>
