--- a/app/views/users/_seniority_row.html.erb
+++ b/app/views/users/_seniority_row.html.erb
@@ -1,9 +1,7 @@
 <div id='seniority-<%= key %>'
      class="form-check seniority_filter_items"
      data-toggle-menu-target='item'>
-  <input class="form-check-input" type="checkbox" value="<%= key %>"
-                              id="flexCheckIndeterminate-<%= key %>">
-  <label class="form-check-label">
-    <%= key + " (#{filter[:size]})" %>
-  </label>
+  <%= check_box_tag key, key, nil, { id: "flexCheckIndeterminate-#{ key }",
+                                                  class: 'form-check-input' } %>
+  <%= label_tag key + " (#{filter[:size]})", nil, class: 'form-check-label' %>
 </div>
