feature(models|views) add turbo streams

--- a/app/views/virtual_drives/_folder.html.erb
+++ b/app/views/virtual_drives/_folder.html.erb
@@ -1,5 +1,6 @@
-<%= link_to drive_path(folder_id: folder.id), class: 'text-dark text-decoration-none' do %>
+<%= link_to drive_path(folder_id: folder.id), class: 'text-dark text-decoration-none', id: dom_id(folder) do %>
   <%= image_tag 'icons/folder-mac-icon.ico', width: 40 %>
   <span><%= folder.name %></span>
+
+  <br>
 <% end %>
-<br>
